examples/test/testpolicy7637.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7637
  namespace: namespace183
spec:
  podSelector:
    matchLabels:
      key26: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value15
          key7: value20
      podSelector:
        matchLabels:
          key23: value20
          key48: value29
